internal/translator/testdata/nonroot-multiplematches/errors.txt
The guess for the IngressRoute include path is /foo. HTTPProxy prefix conditions should not include the include prefix. Please check this value is correct. See https://projectcontour.io/docs/main/httpproxy/#conditions-and-inclusion
